@@ -38,5 +38,7 @@ try:
     testformat("%20.f", -42, grouping=1, output='                 -42')
     testformat("%+10.f", -4200, grouping=1, output='    -4,200')
     testformat("%-10.f", 4200, grouping=1, output='4,200     ')
+    # Invoke getpreferredencoding to make sure it does not cause exceptions,
+    locale.getpreferredencoding()
 finally:
     locale.setlocale(locale.LC_NUMERIC, oldlocale)
